--- a/.github/workflows/hosting.yaml
+++ b/.github/workflows/hosting.yaml
@@ -17,7 +17,7 @@ on:
 
 env:
   HOSTING_PATH: .hosting
-  IMAGE_NAME: capybara-pro-code/github-hosted-app
+  IMAGE_NAME: ${{ github.repository }}
   REGISTRY: ghcr.io
 
 permissions:
