update dotnet sdk to 9

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,7 +33,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '8.0'
+          global-json-file: src/global.json
       
       - name: Get Cache Month
         id: cache-month
